# micropp

./: .gitignore  CMakeLists.txt  README.md
include/: ell.hpp  gp.hpp  material.hpp  micro.hpp  tasks.hpp  util.hpp
src/: ell.cpp  homogenize.cpp  micro.f95  micro2D.cpp  micro3D.cpp  micro3D_exclusive.cpp  micro_common.cpp  micro_if.cpp  output.cpp  solve.cpp  tasks.cpp  wrapper.cpp
test/: CMakeLists.txt  test2d_1.cpp  test3d_1.cpp  test3d_2.cpp  test3d_3.f90  test3d_4.cpp  test3d_5.cpp  test_ell_1.cpp  test_ell_2.cpp  test_ell_3.cpp  test_get_elem_nodes.cpp  test_util_1.cpp
